css 수정 상단 고정 ln sticky > fixed .back 요소 클릭이 가능하도록 z-index 속성 추가

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ body.open_menu {
   overflow-y: hidden;
 }
 
+#container {
+  position: relative;
+}
+
 /* global_nav */
 #gn_menuState,
 #ln_menuState {
@@ -222,7 +226,7 @@ body.open_menu {
 /* local nav */
 /* 영역을 차지하지 않도록 absolute 포지션으로 변경 */
 .ln_sticky .ln {
-  position: sticky;
+  position: fixed;
   top: 0;
   background-color: rgba(252, 255, 255, 0.1);
   backdrop-filter: saturate(180%) blur(15px);
@@ -231,10 +235,10 @@ body.open_menu {
   position: absolute;
   top: 48px;
   left: 0;
+  right: 0;
   width: 100%;
   z-index: 9990;
   height: 76px;
-  /* margin-top: 48px; */
 }
 
 .ln .ln_background {
@@ -394,7 +398,7 @@ body.open_menu {
   height: 0;
   background: rgba(0, 0, 0, 0.4);
   transition: opacity 1s ease 0.2s, width 0s ease 1.2s, height 0s ease 1.2s;
-  /* z-index: 10; */
+  z-index: 10;
 }
 
 #ln_menuState:checked ~ .back {
@@ -428,7 +432,7 @@ body.open_menu {
 }
 
 .head_line {
-  width: 360px;
+  width: 365px;
   margin: 0 auto;
 }
 .section_small_text {
@@ -489,7 +493,7 @@ body.open_menu {
 }
 .scroll_section {
   position: relative;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   padding-top: 60vh;
   word-break: keep-all;
 }
@@ -735,7 +739,7 @@ body.open_menu {
   }
 
   .ln {
-    height: 66px;
+    height: 76px;
   }
   .ln .ln_contents {
     padding: 0 32px;
